Improve Raspberry Pi detection and add pigpio libraries

--- a/projects/cmake/CMakeLists.txt
+++ b/projects/cmake/CMakeLists.txt
@@ -13,14 +13,33 @@ set(SK_OUT "${CMAKE_CURRENT_SOURCE_DIR}/../../out")
 set(SK_BIN "${CMAKE_CURRENT_SOURCE_DIR}/../../bin")
 
 if (WIN32 OR MSYS OR MINGW)
-  SET(MSYS "true")
-  add_definitions(-DWINDOWS)
+    SET(MSYS "true")
+    add_definitions(-DWINDOWS)
 endif()
 
-# Check for Raspberry Pi
-include(CheckIncludeFile)
-find_path(BCM_HOST_INCLUDE_DIR bcm_host.h PATHS "/opt/vc/include")
+# Improved Raspberry Pi detection using newer method
+set(RASPBERRY_PI FALSE)
+
+# Method 1: Check for Raspberry Pi specific file
+if(EXISTS "/proc/device-tree/model")
+    file(READ "/proc/device-tree/model" DEVICE_MODEL)
+    if(DEVICE_MODEL MATCHES "Raspberry Pi")
+        set(RASPBERRY_PI TRUE)
+    endif()
+endif()
+
+# Method 2: Check for ARM architecture and Broadcom chip
+if(CMAKE_SYSTEM_PROCESSOR MATCHES "^(arm|aarch64)")
+    if(EXISTS "/proc/cpuinfo")
+        file(READ "/proc/cpuinfo" CPU_INFO)
+        if(CPU_INFO MATCHES "BCM[0-9]+")
+            set(RASPBERRY_PI TRUE)
+        endif()
+    endif()
+endif()
+
 #### SETUP ####
+
 if (APPLE)
     # MAC OS PROJECT FLAGS
     add_link_options("-Wl-U,___darwin_check_fd_set_overflow")
@@ -55,6 +74,7 @@ if (APPLE)
                    -ldl")
 # WINDOWS PROJECT FLAGS
 elseif(MSYS)
+    # WINDOWS PROJECT FLAGS
     string(COMPARE EQUAL "MINGW32" "$ENV{MSYSTEM}" MINGW32)
     string(COMPARE EQUAL "MINGW64" "$ENV{MSYSTEM}" MINGW64)
 
@@ -73,88 +93,34 @@ elseif(MSYS)
 
     find_package(PkgConfig REQUIRED)
     pkg_check_modules(SDL2 REQUIRED sdl2 sdl2_ttf sdl2_image sdl2_net sdl2_mixer sdl2_gfx libpng libcurl)
-
-    set(LIB_FLAGS  "-L${SK_LIB}/${OS_PATH_SUFFIX} \
-                    -L/${MINGW_PATH_PART}/lib \
-                    -L/usr/lib \
-                    ${SDL2_LDFLAGS} \
-                    -lSDL2main \
-                    -Wl,-Bdynamic \
-                    -lws2_32 \
-                    -lcivetweb")
-                    
-# LINUX PROJECT FLAGS
-else()
-    set(LIB_FLAGS "-lSDL2 \
-                   -lSDL2_mixer \
-                   -lSDL2_ttf \
-                   -lSDL2_gfx \
-                   -lSDL2_image \
-                   -lSDL2_net \
-                   -lpthread \
-                   -lbz2 \
-                   -lFLAC \
-                   -lvorbis \
-                   -lz \
-                   -lpng16 \
-                   -lvorbisfile \
-                   -logg \
-                   -lwebp \
-                   -lfreetype \
-                   -lcurl \
-                   -ldl \
-                   -lstdc++fs")
+    set(LIB_FLAGS "-L${SK_LIB}/${OS_PATH_SUFFIX} -L/${MINGW_PATH_PART}/lib -L/usr/lib ${SDL2_LDFLAGS} -lSDL2main -Wl,-Bdynamic -lws2_32 -lcivetweb")
+else( )
+    # LINUX PROJECT FLAGS
+    set(LIB_FLAGS "-lSDL2 -lSDL2_mixer -lSDL2_ttf -lSDL2_gfx -lSDL2_image -lSDL2_net -lpthread -lbz2 -lFLAC -lvorbis -lz -lpng16 -lvorbisfile -logg -lwebp -lfreetype -lcurl -ldl -lstdc++fs")
 endif()
 
-if (BCM_HOST_INCLUDE_DIR)
+# Raspberry Pi specific settings, keeping non-RPi lines unchanged
+if (RASPBERRY_PI)
     message("Raspberry Pi detected")
-
-    find_path(pigpio_INCLUDE_DIR NAMES pigpio.h pigpiod_if.h pigpiod_if2.h HINTS /usr/include)
-
-    # Find the pigpio libraries.
-    find_library(pigpio_LIBRARY NAMES libpigpio.so HINTS /usr/lib)
-
-    find_library(pigpiod_if_LIBRARY NAMES libpigpiod_if.so HINTS /usr/lib)
-    find_library(pigpiod_if2_LIBRARY NAMES libpigpiod_if2.so HINTS /usr/lib)
-    if(pigpiod_if2_LIBRARY)
-        set(pigpiod_if_LIBRARY ${pigpiod_if2_LIBRARY})
-        # target_link_libraries(SplashKitBackend ${LIB_FLAGS} pigpiod_if2)
+    
+    find_path(PIGPIO_INCLUDE_DIR NAMES pigpio.h pigpiod_if.h pigpiod_if2.h
+        PATHS "/usr/include" "/usr/local/include")
+    
+    find_library(PIGPIO_LIBRARY NAMES pigpio
+        PATHS "/usr/lib" "/usr/local/lib")
+    
+    find_library(PIGPIOD_IF2_LIBRARY NAMES pigpiod_if2
+        PATHS "/usr/lib" "/usr/local/lib")
+    
+    if(PIGPIO_INCLUDE_DIR AND PIGPIO_LIBRARY AND PIGPIOD_IF2_LIBRARY)
+        include_directories(${PIGPIO_INCLUDE_DIR})
+        link_directories("/usr/lib" "/usr/local/lib")
+        set(LIB_FLAGS "${LIB_FLAGS} -lpigpio -lpigpiod_if2")
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
+        add_definitions(-DRASPBERRY_PI)
+    else()
+        message(WARNING "Raspberry Pi detected but pigpio libraries not found. Some features may be unavailable.")
     endif()
-    
-    
-     
-    # Add necessary directories for Raspberry Pi
-    include_directories(/usr/include)
-    # target_link_libraries(/usr/lib)
-    # target_link_libraries(SplashKitBackend ${LIB_FLAGS} pigpio)
-    link_directories(/user/lib)
-    # include_directories("/opt/vc/include")
-    
-    # link_directories("/opt/vc/lib")
-    set(LIB_FLAGS "-lSDL2 \
-                   -lSDL2_mixer \
-                   -lSDL2_ttf \
-                   -lSDL2_gfx \
-                   -lSDL2_image \
-                   -lSDL2_net \
-                   -lpthread \
-                   -lbz2 \
-                   -lFLAC \
-                   -lvorbis \
-                   -lz \
-                   -lpng16 \
-                   -lvorbisfile \
-                   -logg \
-                   -lwebp \
-                   -lfreetype \
-                   -lcurl \
-                   -ldl \
-                   -lstdc++fs\
-                   -lpigpiod_if2")
-# Add -Wall and -pthread options
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
-    # Define RASPBERRY_PI
-    add_definitions(-DRASPBERRY_PI)
 else()
     message("Raspberry Pi not detected")
 endif()
@@ -171,8 +137,7 @@ file(GLOB SOURCE_FILES
     "${SK_EXT}/sqlite/sqlite3.c"
     "${SK_EXT}/hash-library/*.cpp"
     "${SK_EXT}/easyloggingpp/*.cc"
-    "${SK_EXT}/microui/src/*.c"
-)
+    "${SK_EXT}/microui/src/*.c")
 
 # TEST FILE INCLUDES
 file(GLOB TEST_SOURCE_FILES
